--- a/templates/modals/register.html
+++ b/templates/modals/register.html
@@ -1,12 +1,12 @@
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="modalNewRegister">
   <div class="modal-dialog modal-lg">
-    <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Registro</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
     <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">¡Inscríbete!</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
         <div class="row d-flex justify-content-end p-4 m-4" id="modalRegister">
             <div class="col-sm-12 col-md-12">
                 <form id="register-ciclyst" method="POST">
