--- a/templates/email/register_thanks.html
+++ b/templates/email/register_thanks.html
@@ -1,8 +1,11 @@
+
+
+
 <h2>Bienvenido al 6to Reto "Los Miradores" Pedalitos Team<h2>
 
 <p>Gracias por registrarte a uno de los mejores retos de la región de Morelia.</p>
 
-<p>Tus datos han sido enviados para su validación, en cuando hayan sido verificados y se te asigne un número de participante recibirás un correo con nuestra confirmación.</p>
+<p>Tus datos han sido enviados para su validación, en cuando hayan sido verificados y se te asigne un número de participante recibirás un correo con tu número de participante.</p>
 
 <br/>
 Saludos, 
