--- a/templates/email/register_new.html
+++ b/templates/email/register_new.html
@@ -3,12 +3,12 @@
 <br/>
 <p>Los datos del ciclista son:</p>
 
-<p>Nombre: <strong>{{fistname}}</strong></p>
-<p>Apellido: <strong>{{lastname}}</strong></p>
-<p>Suscripción: <strong>{{number}}</strong></p>
-<p>Ciudad: <strong>{{city}}</strong></p>
-<p>Club: <strong>{{club}}</strong></p>
-<p>Paquete: <strong>{{package}}</strong></p>
+<p>Nombre: <strong>{{fistname|safe|escape}}</strong></p>
+<p>Apellido: <strong>{{lastname|safe|escape}}</strong></p>
+<p>Suscripción: <strong>{{number|safe|escape}}</strong></p>
+<p>Ciudad: <strong>{{city|safe|escape}}</strong></p>
+<p>Club: <strong>{{club|safe|escape}}</strong></p>
+<p>Paquete: <strong>{{package|safe|escape}}</strong></p>
 <br/>
 <p>Saludos, </p>
 <p>Pedalitos Team</p>
