Agregar correo de Aprobación y Rechazo

--- a/templates/email/register_thanks.html
+++ b/templates/email/register_thanks.html
@@ -1,7 +1,7 @@
 
 
 
-<h2>Bienvenido al 6to Reto "Los Miradores" Pedalitos Team<h2>
+<h2>Bienvenido al 6to Reto "Los Miradores" Pedalitos Team</h2>
 
 <p>Gracias por registrarte a uno de los mejores retos de la región de Morelia.</p>
 
