--- a/templates/modals/faq.html
+++ b/templates/modals/faq.html
@@ -16,7 +16,7 @@
                 </div>
                 <div id="divQuestion2" class="question-separator mb-4">
                     <p id="question2" class="lead" data-toggle="collapse" href="#awnserQuestion2" aria-expanded="false" aria-controls="awnserQuestion2" style="cursor: pointer;">¿En dondé será el reto?<i class="fas fa-chevron-down float-right"></i></p>
-                    <h6 class="h6 text-muted text-justify collapse" id="awnserQuestion2">Jardín EGP, Av. Thomas Jefferson s/n Ejido Snata María, mejor conocido como "Altozano", Morelia, Michoacán.</h6>
+                    <h6 class="h6 text-muted text-justify collapse" id="awnserQuestion2">Jardín EGP, Av. Thomas Jefferson s/n Ejido Santa María, mejor conocido como "Altozano", Morelia, Michoacán.</h6>
                 </div>
                 <div id="divQuestion3" class="question-separator mb-4">
                     <p id="question3" class="lead" data-toggle="collapse" href="#awnserQuestion3" aria-expanded="false" aria-controls="awnserQuestion3" style="cursor: pointer;">¿A qué hora comienza?<i class="fas fa-chevron-down float-right"></i></p>
